k8s/kube-system/cilium/database-netpol.yaml
apiVersion: "cilium.io/v2"
kind: CiliumNetworkPolicy
metadata:
  name: database-netpol
  namespace: database
spec:
  endpointSelector:
    matchLabels:
      cnpg.io/cluster: database-cluster
  ingress:
  - fromEndpoints:
    - matchLabels:
        k8s:io.kubernetes.pod.namespace: app
        app: backend
    toPorts:
    - ports:
      - port: "5432"
        protocol: TCP
